dashboard collapse section resolve

--- a/css/Hconnect.css
+++ b/css/Hconnect.css
@@ -759,19 +759,19 @@ label, .txtNormal{
 	    font-family: 'Ubuntu', sans-serif;
     padding: 10px 0;
     display: inherit;
-    font-weight: 500;
-    font-size: 15px;
-    color: #636363;
+    font-weight: 400;
+    font-size: 1.1rem;
+    color: #525252;
+    margin-top: 10px;
 }
 
 .profileNames span:last-child {
 	font-family: 'Ubuntu', sans-serif;
     padding: 2px 0;
     display: inherit;
-    font-weight: 500;
-    font-size: 14px;
+    font-weight: 300;
+    font-size: 1em;
     color: #0381c0;
-    
 }
 
 .dashNav {
@@ -780,15 +780,15 @@ label, .txtNormal{
 		
 }
 .navDash {
-	  margin: auto;
+	    margin: auto;
     text-align: left;
-    padding: 8px 17%;
+    padding: 12px 17%;
     font-family: 'Ubuntu', sans-serif;
-    font-size: .85em;
-    font-weight: 500;
+    font-size: 1em;
+    font-weight: 400;
     color: #909090;
-	transition: all .4s;
-	cursor: pointer;
+    transition: all .4s;
+    cursor: pointer;
 }
 
 .navDash:hover {
@@ -946,7 +946,14 @@ box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.15);
     padding: 10px;
     font-size: 16px;
     color: #6f6f6f;
-    font-weight: 400;	
+    font-weight: 400;
+	align-items: center;
+	cursor: pointer;
+	/*overflow: auto;*/
+}
+
+.dshinfoBox>i {
+    color: #868686;
 }
 
 .dshinfoTxt {
@@ -969,8 +976,16 @@ box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.15);
 	font-size: 14px;
 }
 
-.dashMod .dshinfoBox:nth-child(odd) {
+/*.dashMod div.dshinfoBox:nth-child(odd) {
     background-color: white;
+}
+
+.dashMod>div.dshinfoBox:nth-child(even):not(.multi-collapse) {
+    background-color: skyblue;
+}*/
+
+.grd{
+	background-color: white;
 }
 
 .iconTop>div.lines>div {
@@ -1080,7 +1095,39 @@ box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.15);
 }
 
 .dropdown-menu {
+	text-align: center !important;
 	background-color: #ffffff;
   box-shadow: 0 5px 7px 0 rgba(0, 0, 0, 0.2);
 	border: none !important;
+}
+
+.innerCont{
+	    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: .85em;
+    font-weight: 500;
+    color: #656565;
+    margin: 10px 0;
+}
+
+.dashMod .card-body {
+	  padding: .5em 1.5em;
+    border: #b5b5ac;
+}
+
+.disableBtn {
+	padding: 6px 15px !important;
+    color: #e46b66 !important;
+    font-weight: 500 !important;
+    font-size: .9em !important;
+    border-radius: 5px !important;
+}
+
+.enableBtn {
+	padding: 6px 15px !important;
+    color: #1fba21 !important;
+    font-weight: 500 !important;
+    font-size: .9em !important;
+    border-radius: 5px !important;
 }
